objects/ssot__LearnerPathwayItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicSessionId__c</fullName>
        <label>Academic Session</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUnit__c</fullName>
        <label>DurationUnit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learner Pathway Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearnerPathwayId__c</fullName>
        <label>Learner Pathway</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearnerProgramRequirementId__c</fullName>
        <label>Learner Program Requirement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningId__c</fullName>
        <label>Learning</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningPathwayTemplateItemId__c</fullName>
        <label>Learning Pathway Template Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Season__c</fullName>
        <label>Season</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>SequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Year__c</fullName>
        <label>Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817604988_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerPathwayItem_AcademicSessionId_rel</label>
        <referenceTo>ssot__AcademicSession__dlm</referenceTo>
        <relationshipLabel>LearnerPathwayItem_AcademicSessionId_rel</relationshipLabel>
        <relationshipName>rel_1719817604988_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819886694_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerPathwayItem_LearningPathwayTe_rel</label>
        <referenceTo>ssot__LearningPathwayTemplateItem__dlm</referenceTo>
        <relationshipLabel>LearnerPathwayItem_LearningPathwayTe_rel</relationshipLabel>
        <relationshipName>rel_1719819886694_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819889072_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerPathwayItem_LearningId_map_Le_rel</label>
        <referenceTo>ssot__Learning__dlm</referenceTo>
        <relationshipLabel>LearnerPathwayItem_LearningId_map_Le_rel</relationshipLabel>
        <relationshipName>rel_1719819889072_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>